--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=db
 
-# See your JdbcTemplate queries too
+
+# PostgreSQL 13 Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5433/taskdb
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Run schema.sql and data.sql
+spring.sql.init.mode=always
+
+# Debug logging
+logging.level.org.springframework.jdbc.datasource.init=DEBUG
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
