Use postgress db with JpaRepository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,22 @@ spring.application.name=db
 
 # See your JdbcTemplate queries too
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5433/taskdb
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional: Don't run schema.sql and data.sql (JPA creates tables automatically)
+spring.sql.init.mode=never
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
